Closed Bug 1256371 Opened 10 years ago Closed 10 years ago

WebGL is non functional

Categories

(Firefox for Android Graveyard :: Toolbar, defect)

defect
Not set
normal

Tracking

(firefox45+ verified, firefox46 fixed, firefox47 fixed, firefox48 unaffected, relnote-firefox 45+, fennec45+)

RESOLVED FIXED
Firefox 48
Tracking Status
firefox45 + verified
firefox46 --- fixed
firefox47 --- fixed
firefox48 --- unaffected
relnote-firefox --- 45+
fennec 45+ ---

People

(Reporter: kbrosnan, Assigned: dvander)

References

()

Details

Attachments

(2 files)

[Tracking Requested - why for this release]: major web feature broken I have tested several webgl sites and they all report that webgl is non functional. http://get.webgl.org/ http://doesmybrowsersupportwebgl.com/ From https://support.mozilla.org/en-US/questions/1114216
Works here on Nexus 6P. What hardware are you on?
Works on Nexus 9 and Nexus 4 as well. Not sure what's going on, but logcat from an affected device may help.
Flags: needinfo?(kbrosnan)
Kevin says he says 'GLContext is disabled' type of messages in the logcat, presumably due to the crashes. Milan, I think it makes sense to just disable that stuff on Android, sense no configuration changes (driver upgrades) are really possible.
Flags: needinfo?(kbrosnan) → needinfo?(milan)
Attached file 1256371.txt
Full logcat
Milan is PTO this week, redirecting to dvander who I believe is working on this stuff.
Flags: needinfo?(dvander)
Attached patch patchSplinter Review
Sounds reasonable.
Assignee: nobody → dvander
Status: NEW → ASSIGNED
Flags: needinfo?(milan)
Flags: needinfo?(dvander)
Attachment #8730363 - Flags: review?(snorp)
Comment on attachment 8730363 [details] [diff] [review] patch Review of attachment 8730363 [details] [diff] [review]: ----------------------------------------------------------------- Will this also enable WebGL for people where it has been disabled by the crash guard?
(In reply to James Willcox (:snorp) (jwillcox@mozilla.com) from comment #7) > Comment on attachment 8730363 [details] [diff] [review] > patch > > Review of attachment 8730363 [details] [diff] [review]: > ----------------------------------------------------------------- > > Will this also enable WebGL for people where it has been disabled by the > crash guard? Yup.
Comment on attachment 8730363 [details] [diff] [review] patch Review of attachment 8730363 [details] [diff] [review]: ----------------------------------------------------------------- We'll want to uplift this basically everywhere, including release if there is a dot release
Attachment #8730363 - Flags: review?(snorp) → review+
James, David, I am going to start the build of dot release very soon, could you fill the uplift request? Thanks
Flags: needinfo?(snorp)
Flags: needinfo?(dvander)
Comment on attachment 8730363 [details] [diff] [review] patch Approval Request Comment [Feature/regressing bug #]: bug 1190281 [User impact if declined]: No WebGL support for users where WebGL crashed. [Describe test coverage new/current, TreeHerder]: [Risks and why]: No risk, aside from unblocking WebGL for users where it once crashed, so there's a chance they may crash again. This isn't anywhere near as severe as a startup crash which is what the guard was intended to prevent. [String/UUID change made/needed]:
Flags: needinfo?(dvander)
Attachment #8730363 - Flags: approval-mozilla-release?
Attachment #8730363 - Flags: approval-mozilla-beta?
Attachment #8730363 - Flags: approval-mozilla-aurora?
Comment on attachment 8730363 [details] [diff] [review] patch Needed for 45.0.1 fennec Ryan, very sorry but could you land that? Thanks
Flags: needinfo?(ryanvm)
Attachment #8730363 - Flags: approval-mozilla-release?
Attachment #8730363 - Flags: approval-mozilla-release+
Attachment #8730363 - Flags: approval-mozilla-beta?
Attachment #8730363 - Flags: approval-mozilla-beta+
Attachment #8730363 - Flags: approval-mozilla-aurora?
Attachment #8730363 - Flags: approval-mozilla-aurora+
I can get it.
Flags: needinfo?(ryanvm)
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 48
Added to the release notes with "Bring back WebGL support on some devices (1256371)" as wording
(In reply to Carsten Book [:Tomcat] from comment #18) > https://hg.mozilla.org/mozilla-central/rev/5a1e75dd9d54 dvander so this is the final patch that needs to land on beta and co ?
Flags: needinfo?(dvander)
I was able to reproduce this issue on Firefox 45.0 with the following STR: 1. Install crashme add-on 2. Open http://get.webgl.org/ the very quickly crash Firefox 1/2 times I was able to reproduce the issue Verified as fixed on Firefox 45.0.1 following the STR from above, and wasn't able to reproduce at all.
(In reply to Carsten Book [:Tomcat] from comment #20) > (In reply to Carsten Book [:Tomcat] from comment #18) > > https://hg.mozilla.org/mozilla-central/rev/5a1e75dd9d54 > > dvander so this is the final patch that needs to land on beta and co ? Yup.
Flags: needinfo?(dvander)
tracking-fennec: ? → 45+
Flags: needinfo?(snorp)
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: