Bug 1256371 - Disable the WebGL crash guard on Android. (bug 1256371, r=snorp). r=snorp, a=sylvestre